--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "ceil": "^0.0.0",
+    "filter": "^0.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "math": "^0.0.3",
